--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -15,3 +15,7 @@ actions:
     - trunk-fmt-pre-commit
   enabled:
     - trunk-upgrade-available
+lint:
+  enabled:
+    - ruff@0.8.3
+    - black@24.10.0
