--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "ccrs",
         "crossentropy",
         "densitites",
+        "downscaling",
         "edgecolor",
         "facecolor",
         "GEFS",
+        "genlist",
         "handleheight",
         "handlelength",
         "kernal",
